<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="299dp"
        android:layout_height="365dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:foreground="@drawable/gradient_overlay"
                android:scaleType="centerCrop"
                android:src="@drawable/base_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="17dp"
                android:layout_marginVertical="24dp"
                app:cardBackgroundColor="@color/yellow_light"
                app:cardCornerRadius="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginVertical="2dp"
                    android:text="@string/free_e_book"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/card_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/step_design_sprint_for_beginner"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/profile_photo" />

            <ImageView
                android:id="@+id/time_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/_5h_21m"
                android:src="@drawable/stopwatch"
                app:layout_constraintBottom_toBottomOf="@id/time"
                app:layout_constraintEnd_toStartOf="@id/time"
                app:layout_constraintStart_toStartOf="@id/chip_group"
                app:layout_constraintTop_toTopOf="@id/time" />

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/_5h_21m"
                android:textColor="@color/disabled_text_color"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@id/chip_group"
                app:layout_constraintStart_toEndOf="@id/time_icon" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/profile_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/profile_photo">

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_6_lessons"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    app:chipBackgroundColor="@color/teal_200"
                    app:chipCornerRadius="4dp" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_ux"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    app:chipBackgroundColor="@color/blue_color"
                    app:chipCornerRadius="4dp" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/free"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    app:chipBackgroundColor="@color/purple_color"
                    app:chipCornerRadius="4dp" />

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_photo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="17dp"
                android:scaleType="centerInside"
                android:src="@drawable/profile_photo"
                app:layout_constraintBottom_toBottomOf="@id/title"
                app:layout_constraintEnd_toStartOf="@id/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/name"
                app:shapeAppearanceOverlay="@style/CircularImageViewStyle" />


            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/laurel_seilha"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/profile_photo" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:gravity="center_vertical"
                android:text="@string/product_designer"
                android:textColor="@color/disabled_text_color"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/name"
                app:layout_constraintStart_toStartOf="@id/name" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>