<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".firstPage.FirstPageActivity">

        <TextView
            android:id="@+id/loadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/loading_please_wait"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_cat_text_input_layout"
            style="@style/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:hint="@string/main_category"
            android:labelFor="@+id/main_cat">

            <AutoCompleteTextView
                android:id="@+id/main_cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="false"
                android:background="@null"
                android:inputType="none"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sub_cat_text_input_layout"
            style="@style/textInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:hint="@string/subcategory"
            android:labelFor="@id/sub_cat">

            <AutoCompleteTextView
                android:id="@+id/sub_cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="false"
                android:background="@null"
                android:inputType="none"
                android:padding="12dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/sub_cat_options_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>